k3d/messaging/05-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: messaging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - name: producer
        image: localhost:5000/messaging-producer:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
