k3d/messaging/03-seq.yaml
# Seq Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq
  namespace: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
      - name: seq
        image: datalust/seq:latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 5341
          name: ingestion
        volumeMounts:
        - name: seq-data
          mountPath: /data
      volumes:
      - name: seq-data
        persistentVolumeClaim:
          claimName: seq-data
---
# Seq Service
apiVersion: v1
kind: Service
metadata:
  name: seq
  namespace: messaging
spec:
  type: LoadBalancer
  selector:
    app: seq
  ports:
  - name: http
    port: 5341
    targetPort: 80
