k3d/messaging/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-ingress
  namespace: messaging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: redpanda.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redpanda-console
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-ingress
  namespace: messaging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: seq.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seq
            port:
              number: 5341
